--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,32 @@
-@import "bootstrap/dist/css/bootstrap.min.css";
-
 body{
-    background: white;
+    background-color: #008000;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card{
+    background-color: #FFFFFF;
+    width: 250px;
+    height: 400px;
+    border-radius: 10px;
+}
+
+.upper-icon{
+    font-size: 60px;
+    margin-left: 10px;
+}
+
+.number-card{
+    font-size: 100px;
+    justify-self: center;
+}
+
+.down-icon{
+    font-size: 60px;
+    margin-left: 200px;
+    position: relative;
+    top: -50px;
 }
